argocd/manifests/servicenew.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp-service
spec:
  type: ClusterIP
  selector:
    app: mywebapp   # Match the label selector of your Deployment
  ports:
  - port: 80
    targetPort: 80
